# openai-agents-sdk-exploration

./: .env  .gitattributes  .gitignore  LICENSE  ModelSettings.md  OpenAI_Agents_Library_Complete_Guide.md  OpenAI_Agents_Quick_Reference.md  README.md  best_practices.md  config.py  pyproject.toml
00_basic_config/: agent-level.py  main.py  pyproject.toml
01_Runner_exploration/: main.py
02_handsoff/: main.py  pyproject.toml
03_context/: example2.py  main.py  open_ai.py
04_simple_chatbot/: main.py  pyproject.toml
05_output_types/: pyproject.toml
06_dynamic_instructions/: example.py  example3.py  main.py
08_sessions/: main.py  memory_operation.py  pyproject.toml
09_multi-agent-system/: main.py
10_model_settings/: main.py
Basics-Exploration/00_Agents/: main.py  pyproject.toml
Basics-Exploration/01_Runner_exploration/: pyproject.toml  stream_demo.py
Basics-Exploration/03_context/: pyproject.toml
Basics-Exploration/05_output_types/: main.py
Basics-Exploration/06_dynamic_instructions/: example2.py  pyproject.toml
Basics-Exploration/07_Life_cycle_event_hook/: main.py  pyproject.toml
Basics-Exploration/08_sessions/: README.md  memory_operation.py
Basics-Exploration/09_multi-agent-system/: pyproject.toml
Basics-Exploration/10_model_settings/: README.md  pyproject.toml
Basics-Exploration/guardrail/: pydantic_guardrail_understanding.py
Depth-Exploration/00_Agent/: main.py  pyproject.toml
guardrail/: final_example.py  main.py  pyproject.toml  simple_guardials.py
project/todo-maker/: main.py  pyproject.toml  storage_manage.py  task_model.py  (+1 more)
(+4 files in other folders)
