[project]
name = "open-ai-skd-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.2.3",
]

[tool.uv.workspace]
members = ["00_basic_config", "01_Runner_exploration", "01_Runner_exploration/02_quick_start", "03_context", "04_simple_chatbot", "05_output_types", "dynamic_instructions", "07_Life_cycle_event_hook", "04_simple_chatbot/chatbot-exploration", "guardrail", "projects", "08_sessions", "00_default_agent", "09_multi-agent-system", "projects/projects", "project", "weather_app", "project/weather_app", "project/todo-maker", "10_model_settings"]
